Fix layout on mobile devices

--- a/app/assets/stylesheets/layout/post.css
+++ b/app/assets/stylesheets/layout/post.css
@@ -53,6 +53,7 @@
 
   display: flex;
   align-items: center;
+  flex-wrap: wrap;
   margin-bottom: 10px;
   padding-bottom: 10px;
   border-bottom: 1px solid var(--block-border-color);
